--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+python-gcloud-aio-pubsub (6.0.1-0+pexip24u6) pexip; urgency=medium
+
+  * fix unhandled exception in subscriber task
+    Apply patch from PR 815: https://github.com/talkiq/gcloud-aio/pull/815
+
+ -- Huw Jones <huw@pexip.com>  Thu, 19 Sep 2024 16:52:16 +0100
+
 python-gcloud-aio-pubsub (6.0.1-0+pexip24u5) pexip; urgency=medium
 
   * No change rebuild
